Bug 1724994 - Promote GraphRunner to higher priority on Android. r=agi,pehrsons

Differential Revision: https://phabricator.services.mozilla.com/D123346